# project_template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml  issue-branch.yml  mergify.yml
.github/workflows/: amend-prs.yml  artifacts-releases.yml  build-artifacts.yml  check-versions.yml  ci-tools.yml  create-branch.yml  fix-yarn-lockfile.yml  new-release.yml  pre-commit.yml  prepare-yarn-lockfile.yml  prs-deps.yml  trigger-workflow-event.yml  validate-prs.yml  vulnerabilities.yml
docs/: .gitignore  .yarnrc.yml  package.json  preprocess.py
docs/.vuepress/: config.ts
docs/pages/: README.md  first.npmd
