[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
    {name = "John Doe", email = "john.doe@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
description = ""
name = "project_name"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.0"

dependencies = []

[project.optional-dependencies]
dev = [
  "coverage==7.2.4",
  "hammett==0.9.4",
  "hypothesis==6.74.1",
  "mutmut==2.4.3",
  "npdoc-to-md==2.0.1",
]
stable = []

[project.urls]
Changelog = "https://github.com/fblanchetNaN/test/releases"
Documentation = "https://fblanchetnan.github.io/test"
Source = "https://github.com/fblanchetNaN/test"
Tracker = "https://github.com/fblanchetNaN/test/issues"

[tool.hatch.envs.venv]
dependencies = [
  "hatch",
  "pip",
]
detached = true

[tool.hatch.envs.ci]
dependencies = [
  "build",
  "pre-commit",
]
template = "venv"

[tool.hatch.envs.default]
features = ["dev", "stable"]

[tool.hatch.envs.minimal]
features = ["dev"]
dependencies = []
template = "minimal"

[tool.black]
line-length = 120

[tool.mutmut]
paths_to_mutate = "project_name"
runner = "python -m hammett -x"
tests_dir = "tests"

[tool.pyright]
include = ["project_name", "tests"]
typeCheckingMode = "strict"
verboseOutput = true
reportMissingModuleSource = "error"
reportCallInDefaultInitializer = "error"
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"
strictParameterNoneValue = false

[tool.ruff]
fixable = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "E",
  "EM",
  "ERA",
  "F",
  "FBT",
  "G",
  "I",
  "ISC",
  "N",
  "PIE",
  "PLC",
  "PLR",
  "PLW",
  "PTH",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "TRY",
  "W",
  "YTT",
]
format = "github"
ignore = ["E501", "S101", "W505"]
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "E",
  "EM",
  "ERA",
  "F",
  "FBT",
  "G",
  "I",
  "ISC",
  "N",
  "PIE",
  "PLC",
  "PLR",
  "PLW",
  "PTH",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "TRY",
  "W",
  "YTT",
]
show-fixes = true
show-source = true
